fixed scrollbar on first page

--- a/sass_partials/sass/pages/_body.scss
+++ b/sass_partials/sass/pages/_body.scss
@@ -6,6 +6,9 @@
   &--1{
     width: 100%;
   }
+  &--2{
+    overflow: auto;
+  }
   // @include bp(767){
   //   height: 100vh;
   //   width: 100vw;
